<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>

    <string name="spotify_streamer_button_text">SPOTIFY STREAMER</string>
    <string name="spotify_streamer_toast_message">Launch Spotify Streamer</string>

    <string name="scores_app_button_text">SCORES APP</string>
    <string name="scores_app_toast_message">Launch Scores App</string>

    <string name="library_app_button_text">LIBRARY APP</string>
    <string name="library_app_toast_message">Launch Library App</string>

    <string name="build_it_bigger_button_text">BUILD IT BIGGER</string>
    <string name="build_it_bigger_toast_message">Launch Build It Bigger</string>

    <string name="xyz_reader_button_text">XYZ READER</string>
    <string name="xyz_reader_toast_message">Launch XYZ Reader</string>

    <string name="capstone_button_text">CAPSTONE: MY OWN APP</string>
    <string name="capstone_toast_message">Launch Capstone</string>


</resources>
