<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.karthick.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorPortfolioBackground"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:textColor="@color/colorPortfolioTitleTextcolor"
        android:textSize="@dimen/portfolio_title_text_size"
        android:id="@+id/textView_title"
        android:layout_marginTop="@dimen/portfolio_title_margin_top"
        android:layout_centerHorizontal="true" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/textView_title"
       android:layout_marginTop="@dimen/portfolio_linearlayout_margin_top"
       android:orientation="vertical"
       android:gravity="center_horizontal">

       <Button
           android:layout_width="@dimen/app_button_layout_width"
           android:layout_height="@dimen/app_button_layout_height"
           android:text="@string/spotify_streamer_button_text"
           android:textSize="@dimen/app_button_text_size"
           android:textColor="@color/colorAppButtonsText"
           android:id="@+id/button_spotify_streamer"
           android:layout_marginTop="@dimen/app_button_marigin_top"
           android:background="@color/colorAppButtons"
           android:onClick="displayToast" />

       <Button
           android:layout_width="@dimen/app_button_layout_width"
           android:layout_height="@dimen/app_button_layout_height"
           android:text="@string/scores_app_button_text"
           android:textSize="@dimen/app_button_text_size"
           android:textColor="@color/colorAppButtonsText"
           android:id="@+id/button_scores_app"
           android:layout_marginTop="@dimen/app_button_marigin_top"
           android:background="@color/colorAppButtons"
           android:onClick="displayToast" />

       <Button
           android:layout_width="@dimen/app_button_layout_width"
           android:layout_height="@dimen/app_button_layout_height"
           android:text="@string/library_app_button_text"
           android:textSize="@dimen/app_button_text_size"
           android:textColor="@color/colorAppButtonsText"
           android:id="@+id/button_library_app"
           android:layout_marginTop="@dimen/app_button_marigin_top"
           android:background="@color/colorAppButtons"
           android:onClick="displayToast" />

       <Button
           android:layout_width="@dimen/app_button_layout_width"
           android:layout_height="@dimen/app_button_layout_height"
           android:text="@string/build_it_bigger_button_text"
           android:textSize="@dimen/app_button_text_size"
           android:textColor="@color/colorAppButtonsText"
           android:id="@+id/button_build_it_bigger"
           android:layout_marginTop="@dimen/app_button_marigin_top"
           android:background="@color/colorAppButtons"
           android:onClick="displayToast" />

       <Button
           android:layout_width="@dimen/app_button_layout_width"
           android:layout_height="@dimen/app_button_layout_height"
           android:text="@string/xyz_reader_button_text"
           android:textSize="@dimen/app_button_text_size"
           android:textColor="@color/colorAppButtonsText"
           android:id="@+id/button_xyz_reader"
           android:layout_marginTop="@dimen/app_button_marigin_top"
           android:background="@color/colorAppButtons"
           android:onClick="displayToast" />

       <Button
           android:layout_width="@dimen/app_button_layout_width"
           android:layout_height="@dimen/app_button_layout_height"
           android:text="@string/capstone_button_text"
           android:textSize="@dimen/app_button_text_size"
           android:textColor="@color/colorAppButtonsText"
           android:id="@+id/button_capstone"
           android:layout_marginTop="@dimen/app_button_marigin_top"
           android:background="@color/colorCapstoneButton"
           android:onClick="displayToast" />

    </LinearLayout>


</RelativeLayout>
